// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Disabled, rendering 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c1 {
  color: #d1d6db;
}

.c2 {
  border-style: none;
  display: inline;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #007aff;
}

.c2:disabled ~ svg {
  color: #d1d6db;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <span
    checked={undefined}
    className="c1"
    disabled={true}
  >
    <input
      className="c2 c3"
      disabled={true}
      type="radio"
    />
  </span>
</div>
`;

exports[`Radio Not Selected, rendering 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c1 {
  color: #d1d6db;
}

.c1:hover {
  color: #007aff;
}

.c2 {
  border-style: none;
  display: inline;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #007aff;
}

.c2:disabled ~ svg {
  color: #d1d6db;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <span
    checked={undefined}
    className="c1"
    disabled={undefined}
  >
    <input
      className="c2 c3"
      type="radio"
    />
  </span>
</div>
`;

exports[`Radio Selected, rendering 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c1 {
  color: #d1d6db;
}

.c2 {
  border-style: none;
  display: inline;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #007aff;
}

.c2:disabled ~ svg {
  color: #d1d6db;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <span
    checked={true}
    className="c1"
    disabled={undefined}
  >
    <input
      checked={true}
      className="c2 c3"
      type="radio"
    />
  </span>
</div>
`;
